<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llEditPersonalData"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:autofillHints=""
        />
    <EditText
        android:id="@+id/surname1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname1"
        android:inputType="text"
        android:autofillHints=""
        />
    <EditText
        android:id="@+id/surname2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname2"
        android:inputType="text"
        android:autofillHints=""
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        >
    <Button
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/cancel"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/gold"
        />
</LinearLayout>