<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.enrollment.signup.SignUpFragment">


    <!-- Aquí defines las variables que van a estar disponibles en el layout -->
    <data>
        <variable
            name="personCallback"
            type="org.fmm.communitymgmt.ui.common.person.IPersonCallback" />
        <variable
            name="personForm"
            type="org.fmm.communitymgmt.ui.common.person.PersonForm" />

        <import type="org.fmm.communitymgmt.domainmodels.model.Genders"/>
    </data>
<merge>
    <TextView
        android:id="@+id/tvPersonalData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Step 1: Personal data" />

    <EditText
        android:id="@+id/etUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="IdP user Id"
        android:inputType="text"
        tools:ignore="Autofill"
        app:personFormReadOnlyFieldValue="@{personForm.providerId}"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        tools:ignore="Autofill"
        app:formFieldValue="@{personForm.name}"
        app:onStringChanged="@{personCallback::onNameChanged}"
        />

    <EditText
        android:id="@+id/surname1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname1"
        android:inputType="text"
        tools:ignore="Autofill"
        app:formFieldValue="@{personForm.surname1}"
        app:onFieldChanged="@{personCallback::onSurname1Changed}"
        />

    <EditText
        android:id="@+id/surname2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname2"
        android:inputType="text"
        tools:ignore="Autofill"
        app:formFieldValue="@{personForm.surname2}"
        app:onFieldChanged="@{personCallback::onSurname2Changed}"
        />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickName"
        android:inputType="text"
        tools:ignore="Autofill"
        app:formFieldValue="@{personForm.nickname}"
        app:onFieldChanged="@{personCallback::onNicknameChanged}"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/rgGender"
        android:text="@string/gender" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:text="@string/gender"
        app:formGenderValue="@{personForm.gender}"
        app:onRadioGroupChanged="@{personCallback::onGenderChanged}">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="@{Genders.MALE}"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="@{Genders.FEMALE}"
            android:text="@string/female" />
    </RadioGroup>

    <EditText
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthday"
        android:inputType="date"
        app:formFieldValue="@{personForm.birthday}"
        app:onFieldChanged="@{personCallback::onBirthdayChanged}"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:formFieldValue="@{personForm.emailAccount}"
        app:onFieldChanged="@{personCallback::onEmailChanged}"
        tools:ignore="Autofill" />
  </merge>
</layout>
