<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.security.signup.SignUpFragment">


    <!-- Aquí defines las variables que van a estar disponibles en el layout -->
    <data>
        <variable
            name="viewModelFMM"
            type="org.fmm.communitymgmt.ui.comlist.detail.EditPersonViewModel" />
        <variable
            name="formFMM"
            type="org.fmm.communitymgmt.ui.comlist.detail.EditPersonFormState" />
    </data>

<LinearLayout
    android:id="@+id/llSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <!-- TODO: Update blank fragment layout -->
    <ViewFlipper
        android:id="@+id/vfSignUpForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        >
        <LinearLayout
            android:id="@+id/llStep1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvPersonalData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Step 1: Personal data"/>
            <EditText
                android:id="@+id/etUserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="IdP user Id"
                android:inputType="text"
                tools:ignore="Autofill" />
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                app:formName="@{formFMM}"
                app:onNameChanged="@{viewModelFMM::onNameChanged}"
                tools:ignore="Autofill" />
            <EditText
                android:id="@+id/surname1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname1"
                android:inputType="text"
                app:formSurname1="@{formFMM}"
                app:onSurname1Changed="@{viewModelFMM::onSurname1Changed}"
                tools:ignore="Autofill" />
            <EditText
                android:id="@+id/surname2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname2"
                android:inputType="text"
                app:formSurname2="@{formFMM}"
                app:onSurname2Changed="@{viewModelFMM::onSurname2Changed}"
                tools:ignore="Autofill" />
            <EditText
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickName"
                android:inputType="text"
                app:formSurname2="@{formFMM}"
                app:onSurname2Changed="@{viewModelFMM::onSurname2Changed}"
                tools:ignore="Autofill" />
            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday"
                android:inputType="date"
                app:formSurname2="@{formFMM}"
                app:onSurname2Changed="@{viewModelFMM::onSurname2Changed}"
                tools:ignore="Autofill" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gender"
                android:textOn="@string/male"
                android:textOff="@string/female"/>

        </LinearLayout>

    </ViewFlipper>
</LinearLayout>
</layout>
