<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llStep2">

    <data>
        <variable
            name="addressCallback"
            type="org.fmm.communitymgmt.ui.common.IAddressCallback" />
        <variable
            name="addressForm"
            type="org.fmm.communitymgmt.ui.common.AddressForm" />


    </data>
<merge>
    <TextView
        android:id="@+id/tvAddressData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Step 2: Address data"
        />
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:inputType="text"
        tools:ignore="Autofill"
        app:addressFormFieldValue="@{addressForm.address}"
        app:onStringChanged="@{addressCallback::onAddressChanged}"
        />
    <EditText
        android:id="@+id/addressNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addressNumber"
        android:inputType="text"
        tools:ignore="Autofill,TextFields"
        app:addressFormFieldValue="@{addressForm.addressNumber}"
        app:onStringChanged="@{addressCallback::onAddressNumberChanged}"
        />
    <EditText
        android:id="@+id/postalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/postalCode"
        android:inputType="text"
        tools:ignore="Autofill"
        app:addressFormFieldValue="@{addressForm.postalCode}"
        app:onStringChanged="@{addressCallback::onPostalCodeChanged}"
        />
    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:inputType="text"
        tools:ignore="Autofill"
        app:addressFormFieldValue="@{addressForm.city}"
        app:onStringChanged="@{addressCallback::onCityChanged}"
        />
</merge>
</layout>