<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvCommunityItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardUseCompatPadding="false"
    app:cardCornerRadius="16dp"
    app:cardElevation="16dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCommunityList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >
        <TextView
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photo"
            android:layout_width="@dimen/photo_width"
            android:layout_height="@dimen/photo_height"
            android:contentDescription="@string/person_image"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullName"
            app:shapeAppearanceOverlay="@style/Rounded"
            />
        <TextView
            android:id="@+id/nickName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nickName"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintStart_toEndOf="@id/photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/photo"
            />
        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_phone"
            app:layout_constraintStart_toStartOf="@id/nickName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nickName"
            />
        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="14sp"
            app:drawableLeftCompat="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="@id/nickName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>