<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llLoginButtons"
        android:visibility="visible"
        android:orientation="vertical"
        android:gravity="top"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/mainLogo"
            android:layout_width="@dimen/load_image"
            android:layout_height="@dimen/load_image"
            android:contentDescription="@string/app_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/iconos_del_camino"
            android:layout_margin="6dp"
            android:layout_gravity="center"
            app:strokeColor="@color/primary"

            />
        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/mainFragmentContainerView"
            android:text="@string/app_title"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@color/primary"
            android:gravity="center"
            />
        <!-- TODO: Update blank fragment layout -->
    </LinearLayout>
    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/gold"
        app:layout_constraintTop_toBottomOf="@+id/llMain"
        app:layout_constraintBottom_toTopOf="@id/llLoginButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/llLoginButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_gravity="center"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/githubSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_github"
            app:icon="@drawable/ic_github_mark"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_gravity="center"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
